static/styles.less
@import (less) "../node_modules/leaflet/dist/leaflet.css";
@import (less) "../node_modules/leaflet.markercluster/dist/MarkerCluster.css";

@icon-size: 40px;
@cluster-sm-size: 50px;
@cluster-md-size: 60px;
@cluster-lg-size: 70px;

.leaflet-container {
	font: inherit;
}

.leaflet-marker-icon {
	border-radius: @icon-size / 2;
	border: none;
	background: none;

	.user-icon {
		border-radius: @icon-size / 2;
		width: @icon-size;
		height: @icon-size;
		line-height: @icon-size;
		font-size: 2em;
	}
}

.leaflet-cluster-icon {
	.user-icon {
		background-color: #fff;
		color: #777;
		font-size: 2.5em;
  	}

  	.cluster-small {
		border-radius: @cluster-sm-size / 2;
		height: @cluster-sm-size;
		width: @cluster-sm-size;
		line-height: @cluster-sm-size;
	}

  	.cluster-medium {
		border-radius: @cluster-md-size / 2;
		height: @cluster-md-size;
		width: @cluster-md-size;
		line-height: @cluster-md-size;
	}

  	.cluster-large {
		border-radius: @cluster-lg-size / 2;
		height: @cluster-lg-size;
		width: @cluster-lg-size;
		line-height: @cluster-lg-size;
	}
}

